--- a/frontend/src/styles/ErrorMessage.css
+++ b/frontend/src/styles/ErrorMessage.css
@@ -3,10 +3,11 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    top: 40px;
+    top: 90px;
     left: 0;
     right: 0;
     height: 0;
+    z-index: 9999;
 }
 
 .error-message {
