need to make add habit next

--- a/frontend/src/styles/User.css
+++ b/frontend/src/styles/User.css
@@ -20,3 +20,15 @@
     padding: 10px;
     width: 325px;
 }
+
+.italic::placeholder {
+    font-style: italic;
+}
+
+.habit-input {
+    width: 90%;
+    border: none;
+    border-radius: 10px;
+    padding: 6px; 
+    font-size: 16px
+}
