--- a/frontend/src/styles/User.css
+++ b/frontend/src/styles/User.css
@@ -6,10 +6,12 @@
 }
 
 .user-container-title {
-    font-size: 6em;
+    font-size: 4em;
     font-style: italic;
     margin-bottom: 20px !important;
     text-align: center;
+    max-width: 750px;
+    word-wrap: break-word;
 }
 
 .user-info-container {
@@ -31,4 +33,13 @@
     border-radius: 10px;
     padding: 6px; 
     font-size: 16px
+}
+
+.habit-record-plot-container {
+    background-color: #303030;
+    border-radius: 8px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 10px;
+    width: 750px;
 }
