--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -13,6 +13,7 @@
     color: #00f7ff;
     text-decoration: none;
     padding: 0 5px;
+    /* TODO: need to add background coloring to them */
 }
 
 .headerlink-dot {
