--- a/frontend/src/styles/ErrorMessage.css
+++ b/frontend/src/styles/ErrorMessage.css
@@ -11,7 +11,7 @@
 }
 
 .error-message {
-    background-color: red;
+    background-color: darkRed;
     border-radius: 5px;
     color: white;
     font-weight: bold;
